Versuch 2: Push nach Fehler

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <h2>Psychologische Begleitung für die frühe Elternzeit</h2>
-        <p>Die Geburt eines Kindes verändert vieles. Ich biete psychologische Unterstützung für Eltern in der frühen Familienzeit.</p>
+        <p>Die Zeit nach der Geburt eines Kindes (Postpartalzeit) ist eine sehr sensible und bringt große Veränderungen mit sich und hält viele Herausforderungen bereit. Ich biete psychologische Unterstützung in der frühen Familienzeit.</p>
         <p>Mehr Infos zur Müttergruppe finden Sie <a href="muettergruppe.html">hier</a>.</p>
     </main>
     <footer>
