--- a/muettergruppe.html
+++ b/muettergruppe.html
@@ -23,24 +23,29 @@
     <main>
         <h2>Müttergruppe – Raum für Austausch & psychologische Begleitung</h2>
 
-        <p>Die Ankunft eines Kindes bringt tiefgreifende Veränderungen mit sich – körperlich, emotional, im sozialen Umfeld und in der Partnerschaft. Viele Frauen erleben diese Zeit nicht nur als wunderschön, sondern auch als herausfordernd, mit Momenten der Unsicherheit oder Überforderung. Der Begriff <strong>"Muttertät"</strong> beschreibt diesen Prozess der tiefen Umwandlung treffend – und zeigt: Mutterwerden ist ein intensiver Entwicklungsweg.</p>
+        <p>Die Ankunft eines Kindes bringt tiefgreifende Veränderungen mit sich – körperlich, emotional, im sozialen Umfeld und in der Partnerschaft. Viele Frauen erleben diese Zeit nicht nur als wunderschön, sondern auch als (heraus-)fordernd, mit Momenten der Unsicherheit oder Überforderung. Der Begriff <strong>"Muttertät"</strong>, eine Zusammensetzung aus "Mutter" und "Pubertät", beschreibt diesen Prozess der tiefen Umwandlung treffend und zeigt: Mutter- bzw. Elternwerden ist ein intensiver Entwicklungsweg.</p>
+        <p>Die im Sommer 2025 startende Müttergruppe ist ein Angebot <strong>für Mütter mit Kind(ern) im ersten Lebensjahr</strong>.</p>
+        <p>In der Müttergruppe soll ein sicherer und geschützter Raum entstehen, in dem Sie sich <strong>über 10 Wochen</strong> mit anderen Müttern vernetzen und austauschen können. Ziel ist es, gemeinsam relevante Themen zu besprechen, einander zuzuhören, sich verstanden zu fühlen – und auch Impulse zur Selbstreflexion und psychologischen Orientierung mitzunehmen.</p>
 
-        <p>In der Müttergruppe soll ein sicherer und geschützter Raum entstehen, in dem du dich mit anderen Müttern vernetzen und austauschen kannst. Ziel ist es, gemeinsam relevante Themen zu besprechen, einander zuzuhören, sich verstanden zu fühlen – und auch Impulse zur Selbstreflexion und psychologischen Orientierung mitzunehmen.</p>
-
-        <h3>Themen in der Gruppe können u. a. sein:</h3>
+        <h3>Themen in der Gruppe werden u. a. sein:</h3>
         <ul>
-            <li>Erwartungen an das Muttersein und die Realität</li>
+            <li>(eigene) Erwartungen an das Muttersein und die Realität</li>
             <li>Rollenbilder und wie sie uns prägen</li>
-            <li>Stress und Selbstfürsorge</li>
+            <li>das sich wandelnde Familienbild und -verständnis in unserer Gesellschaft und der heutigen Zeit</li>
+            <li>Stress, Stressmanagement und Selbstfürsorge</li>
             <li>Veränderungen im Körpergefühl, in der Psyche, im beruflichen Alltag</li>
-            <li>Auswirkungen auf die Paarbeziehung</li>
+            <li>Auswirkungen des Elternseins auf die Paarbeziehung</li>
         </ul>
+        <p>Wir werden aber auch gemeinsam besprechen, welche weiteren Themen für Sie Priorität haben.</p>
 
         <h3>Organisatorisches</h3>
-        <p><strong>Ort:</strong> Meine Praxis in Offenbach</p>
-        <p><strong>Termin:</strong> Wöchentliche Treffen am Wochenende (genauer Tag & Uhrzeit werden noch bekannt gegeben)</p>
-        <p><strong>Dauer:</strong> Ca. 100 Minuten pro Termin</p>
-        <p><strong>Teilnahme mit Kind:</strong> Je nach Möglichkeit kannst du dein Kind mitbringen oder für die Zeit der Gruppe eine Betreuung organisieren. Es wird Raum für beides geben.</p>
+        <p><strong>Ort:</strong> Praxis für Psychotherapie, Bernardstraße 112, 63067 Offenbach am Main</p>
+        <p><strong>Termin:</strong> 10 wöchentliche Sitzungen <strong> ab Mitte Juli </strong> an Samstagen bzw. Sonntagen – genaue Tage & Uhrzeiten werden noch bekannt gegeben, sobald die geplante Teilnehmer:innenanzahl erreicht ist. Bei einer Anmeldung über das <a href="kontakt.html">Kontaktformular</a> können Sie Ihre Präferenzen für Tage und Uhrzeiten angeben und ich versuche, einen gemeinsamen Nenner für alle zu finden. </p>
+        <p><strong>Dauer:</strong> 100 Minuten pro Termin (inkl. Pause zwischendurch)</p>
+        <p><strong>Gruppengröße:</strong> Geplant ist eine Teilnehmer:innenanzahl von maximal 8 Personen.</p>
+        <p><strong>Kosten:</strong> 280€ pro Person, 220€ für Empfänger von Sozialleistungen, Studierende oder Auszubildende (gegen Nachweis)</p>
+        <p><strong>Betreuung des Kindes:</strong> Sollte es Ihnen möglich sein, versuchen Sie eine Betreuung für Ihr Kind während der Gruppenzeit zu organisieren, damit Sie sich mental bestmöglich auf sich konzentrieren können. Eine Bezugsperson kann nach vorheriger Rücksprache gerne in einem Nebenraum auf Ihr Kind aufpassen. Sollte Ihnen keine Betreuung möglich sein, ist Ihr Kind natürlich herzlich Willkommen in unserer Runde.</p>
+        <p><strong>Weitere Infos:</strong> Die Praxis ist barrierefrei.</p>
     </main>
 
     <footer>
