--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -30,11 +30,11 @@
 
         <p>Mein Name ist Emilia Schneider. Ich stehe kurz vor dem Abschluss meines Masterstudiums in Klinischer Psychologie und Psychotherapie und beginne im Frühjahr 2026 meine Ausbildung zur Psychotherapeutin in Frankfurt.</p>
 
-        <p>Schon seit Beginn meines Studiums beschäftige ich mich intensiv mit der psychischen Gesundheit rund um die Geburt eines Kindes. Besonders interessiert mich dabei, wie es Eltern – insbesondere Müttern – in der Übergangszeit nach der Geburt geht und welche Bedürfnisse sie haben.</p>
+        <p>Schon seit Beginn meines Studiums beschäftige ich mich intensiv mit der psychischen Gesundheit von Eltern rund um die Geburt eines Kindes. Besonders interessiert mich dabei, wie es Eltern – insbesondere Müttern – in der Übergangszeit nach der Geburt geht und welche Bedürfnisse sie haben.</p>
 
-        <p>Neben meinem Studium habe ich in verschiedenen Einrichtungen praktische Erfahrungen gesammelt, darunter auf mehreren Mutter-Kind-Stationen in psychiatrischen Kliniken, und konnte dort mein Wissen in der psychischen Unterstützung von Eltern vertiefen. Auch meine Masterarbeit habe ich einem Thema aus dem Bereich der peripartalen psychischen Gesundheit gewidmet.</p>
+        <p>Neben meinem Studium habe ich in verschiedenen Einrichtungen praktische Erfahrungen gesammelt, darunter auf mehreren Mutter-Kind-Stationen in psychiatrischen Kliniken. Dort konnte ich mein Wissen in der psychischen Unterstützung von Eltern vertiefen. Auch meine Masterarbeit habe ich einem Thema aus dem Bereich der peripartalen psychischen Gesundheit gewidmet.</p>
 
-        <p>Mir ist es ein großes Anliegen, dass Eltern mit ihren Belastungen gesehen werden – auch wenn diese nicht immer auf den ersten Blick sichtbar sind. Ich möchte mit meinen Angeboten einen sicheren, wertfreien Raum schaffen, in dem all das Platz haben darf, was Eltern in dieser intensiven Lebensphase bewegt.</p>
+        <p>Mir ist es ein großes Anliegen, dass Eltern mit ihren Belastungen gesehen werden – gerade, weil diese nicht immer auf den ersten Blick sichtbar sind. Ich möchte mit meinen Angeboten einen sicheren, wertfreien Raum schaffen, in dem all das Platz haben darf, was Eltern in dieser intensiven Lebensphase bewegt.</p>
 
         <!-- Optionales Zitat -->
         <!-- <blockquote style="margin-top: 30px; font-style: italic; color: #555;">
