Bild auf Mobilgeräten verbessert

--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -24,10 +24,10 @@
         <h2>Über mich</h2>
 
         <!-- Bildbereich -->
-        <div style="text-align: center; margin-bottom: 20px;">
-            <img src="Schneider.JPG" alt="Foto von Emilia Schneider" class="profilbild-rechts">
-        </div>
-
+        <div class="ueber-mich-container">
+            <img src="Schneider.JPG" alt="Foto von Emilia Schneider" class="ueber-mich-bild">
+    
+            <div class="ueber-mich-text">
         <p>Mein Name ist Emilia Schneider. Ich stehe kurz vor dem Abschluss meines Masterstudiums in Klinischer Psychologie und Psychotherapie und beginne im Frühjahr 2026 meine Ausbildung zur Psychotherapeutin in Frankfurt.</p>
 
         <p>Schon seit Beginn meines Studiums beschäftige ich mich intensiv mit der psychischen Gesundheit von Eltern rund um die Geburt eines Kindes. Besonders interessiert mich dabei, wie es Eltern – insbesondere Müttern – in der Übergangszeit nach der Geburt geht und welche Bedürfnisse sie haben.</p>
