Bild auf Mobilgeräten verbessert

--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -40,6 +40,8 @@
         <!-- <blockquote style="margin-top: 30px; font-style: italic; color: #555;">
             „Man wächst nicht nur mit dem Kind, sondern auch an dem, was Elternsein bedeutet.“
         </blockquote> -->
+            </div>
+        </div>    
     </main>
 
     <footer>
