--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </header>
     <main>
         <h2>Psychologische Begleitung für die frühe Elternzeit</h2>
-        <p>Die Zeit nach der Geburt eines Kindes (Postpartalzeit) ist eine sehr sensible und bringt große Veränderungen mit sich und hält viele Herausforderungen bereit. Ich biete psychologische Unterstützung in der frühen Familienzeit.</p>
-        <p>Mehr Infos zur Müttergruppe finden Sie <a href="muettergruppe.html">hier</a>.</p>
+        <p>Die Zeit nach der Geburt eines Kindes (Postpartalzeit) ist eine sehr sensible. Sie bringt große Veränderungen mit sich und hält viele Herausforderungen bereit. Ich biete psychologische Unterstützung in der frühen Familienzeit.</p>
+        <p>Mehr Infos zur <strong>Müttergruppe ab Mitte Juli 2026</strong> finden Sie <a href="muettergruppe.html">hier</a>.</p>
     </main>
     <footer>
         <p>&copy; <span id="jahr"></span> Elternwerden – Psychologische Beratung</p>
