--- a/muettergruppe.html
+++ b/muettergruppe.html
@@ -44,7 +44,7 @@
         <p><strong>Dauer:</strong> 100 Minuten pro Termin (inkl. Pause zwischendurch)</p>
         <p><strong>Gruppengröße:</strong> Geplant ist eine Teilnehmer:innenanzahl von maximal 8 Personen.</p>
         <p><strong>Kosten:</strong> 280€ pro Person, 220€ für Empfänger von Sozialleistungen, Studierende oder Auszubildende (gegen Nachweis)</p>
-        <p><strong>Betreuung des Kindes:</strong> Sollte es Ihnen möglich sein, versuchen Sie eine Betreuung für Ihr Kind während der Gruppenzeit zu organisieren, damit Sie sich mental bestmöglich auf sich konzentrieren können. Eine Bezugsperson kann nach vorheriger Rücksprache gerne in einem Nebenraum auf Ihr Kind aufpassen. Sollte Ihnen keine Betreuung möglich sein, ist Ihr Kind natürlich herzlich Willkommen in unserer Runde.</p>
+        <p><strong>Betreuung des Kindes:</strong> Sollte es Ihnen möglich sein, versuchen Sie eine Betreuung für Ihr Kind während der Gruppenzeit zu organisieren, damit Sie sich mental bestmöglich auf sich konzentrieren können. In unmittelbarer Umgebung befinden sich auch mehrere Cafés, in denen eine Bezugsperson in der Gruppenzeit mit Ihrem Kind warten kann. Sollte Ihnen keine Betreuung möglich sein, ist Ihr Kind natürlich herzlich Willkommen in unserer Runde.</p>
         <p><strong>Weitere Infos:</strong> Die Praxis ist barrierefrei.</p>
     </main>
 
