--- a/muettergruppe.html
+++ b/muettergruppe.html
@@ -40,7 +40,7 @@
 
         <h3>Organisatorisches</h3>
         <p><strong>Ort:</strong> Praxis für Psychotherapie, Bernardstraße 112, 63067 Offenbach am Main</p>
-        <p><strong>Termin:</strong> 10 wöchentliche Sitzungen <strong> ab Mitte Juli </strong> an Samstagen bzw. Sonntagen – genaue Tage & Uhrzeiten werden noch bekannt gegeben, sobald die geplante Teilnehmer:innenanzahl erreicht ist. Bei einer Anmeldung über das <a href="kontakt.html">Kontaktformular</a> können Sie Ihre Präferenzen für Tage und Uhrzeiten angeben und ich versuche, einen gemeinsamen Nenner für alle zu finden. </p>
+        <p><strong>Termin:</strong> 10 wöchentliche Sitzungen <strong> ab Mitte Juli </strong> an Samstagen bzw. Sonntagen – genaue Tage & Uhrzeiten werden rechtzeitig bekannt gegeben, sobald die geplante Teilnehmer:innenanzahl erreicht ist. Bei einer Anmeldung über das <a href="kontakt.html">Kontaktformular</a> können Sie Ihre Präferenzen für Tage und Uhrzeiten angeben und ich versuche, einen gemeinsamen Nenner für alle zu finden. </p>
         <p><strong>Dauer:</strong> 100 Minuten pro Termin (inkl. Pause zwischendurch)</p>
         <p><strong>Gruppengröße:</strong> Geplant ist eine Teilnehmer:innenanzahl von maximal 8 Personen.</p>
         <p><strong>Kosten:</strong> 280€ pro Person, 220€ für Empfänger von Sozialleistungen, Studierende oder Auszubildende (gegen Nachweis)</p>
