Logo eingefügt, responsive gemacht und Headerfarbe verändert

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <h1>Willkommen bei Elternwerden</h1>
+        <div class="logo-container">
+            <h1>Willkommen bei</h1>
+            <img src="Logo_final.png" alt="Logo Elternwerden" class="logo">
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Start</a></li>
@@ -19,10 +22,11 @@
             </ul>
         </nav>
     </header>
+    
     <main>
         <h2>Psychologische Begleitung für die frühe Elternzeit</h2>
         <p>Die Zeit nach der Geburt eines Kindes (Postpartalzeit) ist eine sehr sensible. Sie bringt große Veränderungen mit sich und hält viele Herausforderungen bereit. Ich biete psychologische Unterstützung in der frühen Familienzeit.</p>
-        <p>Mehr Infos zur <strong>Müttergruppe ab Mitte Juli 2025</strong> finden Sie <a href="muettergruppe.html">hier</a>.</p>
+        <p>Mehr Infos zur <strong>Müttergruppe ab August 2025</strong> finden Sie <a href="muettergruppe.html">hier</a>.</p>
     </main>
     <footer>
         <p>&copy; <span id="jahr"></span> Elternwerden – Psychologische Beratung</p>
