Logo Unterseiten geändert

--- a/kontakt.html
+++ b/kontakt.html
@@ -9,16 +9,21 @@
 </head>
 <body>
     <header>
-        <h1>Elternwerden</h1>
+        <div class="logo-container">
+          <a href="index.html">
+            <img src="Logo_final.png" alt="Logo Elternwerden" class="logo">
+          </a>
+        </div>
         <nav>
-            <ul>
-                <li><a href="index.html">Start</a></li>
-                <li><a href="muettergruppe.html">Müttergruppe</a></li>
-                <li><a href="ueber-mich.html">Über mich</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
-            </ul>
+          <ul>
+            <li><a href="index.html">Start</a></li>
+            <li><a href="muettergruppe.html">Müttergruppe</a></li>
+            <li><a href="ueber-mich.html">Über mich</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+          </ul>
         </nav>
-    </header>
+      </header>
+      
 
     <main>
         <h2>Kontakt & Anmeldung</h2>
