--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
         <p>Mehr Infos zur <strong>Müttergruppe ab August 2025</strong> finden Sie <a href="muettergruppe.html">hier</a>.</p>
     </main>
     <footer>
-        <p>&copy; <span id="jahr"></span> Elternwerden – Psychologische Beratung</p>
+        <p>&copy; <span id="jahr"></span> Elternwerden – psychologische Beratung</p>
+        <p><a href="impressum-datenschutz.html" class="footer-link">Impressum & Datenschutz</a></p>
     </footer>
-    
-    <script>
-        // Automatisch das aktuelle Jahr einfügen
+      
+      <script>
+        // Automatische Jahreszahl
         document.getElementById("jahr").textContent = new Date().getFullYear();
-    </script>
+      </script>
     </body>
 </html>
