--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -31,7 +31,7 @@
         <!-- Wrapper für Text und Bild -->
         <div class="ueber-mich-container">
             <div class="ueber-mich-text">
-                <p>Mein Name ist Emilia Schneider. Ich stehe kurz vor dem Abschluss meines Masterstudiums in Klinischer Psychologie und Psychotherapie und beginne im Frühjahr 2026 meine Ausbildung zur Psychotherapeutin in Frankfurt.</p>
+                <p>Mein Name ist Emilia Schneider. Im Sommer 2025 beende ich mein Masterstudium in Klinischer Psychologie und Psychotherapie und beginne im Frühjahr 2026 meine Ausbildung zur Psychotherapeutin in Frankfurt.</p>
     
                 <p>Schon seit Beginn meines Studiums beschäftige ich mich intensiv mit der psychischen Gesundheit von Eltern rund um die Geburt eines Kindes. Besonders interessiert mich dabei, wie es Eltern – insbesondere Müttern – in der Übergangszeit nach der Geburt geht und welche Bedürfnisse sie haben.</p>
     
