--- a/impressum-datenschutz.html
+++ b/impressum-datenschutz.html
@@ -43,8 +43,40 @@
 
     <hr>
 
-    <h2>Datenschutz</h2>
-    <p>Die Informationen zum Datenschutz folgen in Kürze.</p>
+    <h2>Datenschutzerklärung</h2>
+
+    <h3>1. Allgemeine Hinweise</h3>
+    <p>Der Schutz Ihrer persönlichen Daten ist uns ein besonderes Anliegen. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
+
+    <h3>2. Verantwortliche Stelle</h3>
+    <p>Emilia Schneider<br>
+    Odenwaldstraße 12<br>
+    60528 Frankfurt am Main<br>
+    E-Mail: elternwerden@posteo.de<br>
+    Telefon: +49 1577 0253484</p>
+
+    <h3>3. Erhebung und Verarbeitung personenbezogener Daten</h3>
+    <p>Personenbezogene Daten werden auf dieser Website nur erhoben, wenn Sie uns diese im Rahmen einer Anfrage über das Kontaktformular mitteilen. Die Verarbeitung dieser Daten erfolgt auf Grundlage von Art. 6 Abs. 1 lit. b DSGVO zur Bearbeitung Ihrer Anfrage.</p>
+
+    <h3>4. Kontaktformular (Formspree)</h3>
+    <p>Wenn Sie uns per Formular Anfragen zukommen lassen, werden Ihre Angaben aus dem Formular inklusive der von Ihnen angegebenen Kontaktdaten zur Bearbeitung der Anfrage bei uns gespeichert.<br>
+    Die Übermittlung erfolgt über den Anbieter Formspree (https://formspree.io), welcher als technischer Dienstleister fungiert. Die Daten werden dabei direkt an unsere E-Mail-Adresse weitergeleitet und nicht auf den Servern von Formspree gespeichert.<br>
+    Bitte beachten Sie, dass die Nutzung des Formulars freiwillig ist.</p>
+
+    <h3>5. Hosting über GitHub Pages</h3>
+    <p>Diese Website wird über GitHub Pages (ein Dienst der GitHub Inc., 88 Colin P Kelly Jr St, San Francisco, CA 94107, USA) gehostet. Beim Besuch der Seite werden automatisch Informationen durch den Webserver erfasst (z. B. IP-Adresse, Browsertyp, Datum und Uhrzeit des Zugriffs). Diese Daten sind nicht bestimmten Personen zuordenbar und dienen ausschließlich der technischen Überwachung und Sicherheit.</p>
+
+    <h3>6. Google Fonts</h3>
+    <p>Diese Website verwendet zur einheitlichen Darstellung von Schriftarten sogenannte Google Fonts, die von Google bereitgestellt werden. Beim Aufruf einer Seite lädt Ihr Browser die benötigten Web Fonts direkt von Google-Servern in Ihren Browsercache. Dabei wird Ihre IP-Adresse an Google übermittelt.<br>
+    Anbieter ist Google Ireland Limited, Gordon House, Barrow Street, Dublin 4, Irland.<br>
+    Die Nutzung von Google Fonts erfolgt im Interesse einer ansprechenden Darstellung unseres Online-Angebots.<br>
+    Weitere Informationen finden Sie unter: <a href="https://developers.google.com/fonts/faq" target="_blank">https://developers.google.com/fonts/faq</a></p>
+
+    <h3>7. Ihre Rechte</h3>
+    <p>Sie haben jederzeit das Recht auf Auskunft über Ihre gespeicherten personenbezogenen Daten, deren Herkunft und Empfänger, sowie den Zweck der Datenverarbeitung. Außerdem haben Sie ein Recht auf Berichtigung, Sperrung oder Löschung dieser Daten.</p>
+
+    <h3>8. SSL- bzw. TLS-Verschlüsselung</h3>
+    <p>Diese Seite nutzt aus Sicherheitsgründen eine SSL-Verschlüsselung. Eine verschlüsselte Verbindung erkennen Sie daran, dass die Adresszeile des Browsers mit „https://“ beginnt.</p>
   </main>
 
   <footer>
